Cleanup after merging a lot of conflicts.