@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -127,133 +126,3 @@
 		</resources>
 	</build>
 </project>
-=======
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.ow2.play</groupId>
-		<artifactId>play-dcep-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../play-dcep-parent/pom.xml</relativePath>
-	</parent>
-
-	<artifactId>play-dcep-distributedetalis</artifactId>
-	<packaging>jar</packaging>
-
-	<name>play-dcep-distributedetalis</name>
-	<description></description>
-
-	<dependencies>
-		<dependency>
-			<groupId>jtalis</groupId>
-			<artifactId>jtalis-core</artifactId>
-			<version>1.0</version>
-			<type>jar</type>
-			<exclusions>
-				<exclusion>
-					<artifactId>play-dcep-distributedetalis</artifactId>
-					<groupId>eu.play-project</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>fr.inria.eventcloud</groupId>
-			<artifactId>eventcloud-core</artifactId>
-			<exclusions>
-				<exclusion>
-					<artifactId>play-commons-constants</artifactId>
-					<groupId>eu.play-project</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>play-commons-eventformat</artifactId>
-					<groupId>eu.play-project</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-commons-eventtypes</artifactId>
-			<version>${project.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jena-arq</artifactId>
-					<groupId>org.apache.jena</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-dcep-api</artifactId>
-			<version>${project.version}</version>
-
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-platformservices-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.openlinksw</groupId>
-			<artifactId>virtjdbc4</artifactId>
-			<version>1.0</version>
-		</dependency>
-	</dependencies>
-
-	<repositories>
-		<repository>
-			<id>sti2-archiva-external</id>
-			<url>http://maven.sti2.at/archiva/repository/external</url>
-		</repository>
-		<repository>
-			<id>sti2-archiva-snapshot</id>
-			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
-		</repository>
-		<repository>
-			<id>dspace-releases</id>
-			<name>dspace releases repository</name>
-			<url>http://dspace.gforge.inria.fr/maven2/repository/releases</url>
-		</repository>
-		<!-- For Virtuoso: -->
-		<repository>
-			<id>mysema-source</id>
-			<url>http://source.mysema.com/maven2/releases</url>
-			<layout>default</layout>
-		</repository>		
-	</repositories>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Djava.security.manager
-						-Djava.security.policy=src/main/resources/proactive.java.policy</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<directory>src/main/resources/PrologMethods</directory>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/adl</directory>
-			</resource>
-		</resources>
-	</build>
-</project>
->>>>>>> 1801c9c1039ae3f26827d175e7ad869de92b7c3a
