@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -78,84 +77,3 @@
 	</dependencies>
 
 </project>
-=======
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.ow2.play</groupId>
-		<artifactId>play-platformservices-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../play-platformservices-parent/pom.xml</relativePath>
-	</parent>
-
-	<artifactId>play-platformservices</artifactId>
-	<packaging>jar</packaging>
-
-	<name>play-platformservices</name>
-	<description></description>
-
-	<properties>
-		<cxf.version>2.4.3</cxf.version>
-	</properties>
-	
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/adl</directory>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-			</testResource>
-			<testResource>
-				<filtering>false</filtering>
-				<directory>src/test/adl</directory>
-			</testResource>
-		</testResources>
-    	<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Djava.security.manager
-						-Djava.security.policy=proactive.java.policy
-<!-- 						-Dgcmdfile="D://tmp//proactive//ProActive-r12354//examples//hello//helloDeploymentLocal.xml" -->
-<!-- 						-Dos=windows -->
-<!-- 						-Dproactive.home="D:\tmp\proactive\ProActive-r12354\" -->
-					</argLine>
-					</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-platformservices-querydispatcher</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-platformservices-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-dcep-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ow2.play</groupId>
-			<artifactId>play-commons-constants</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
-
-</project>
->>>>>>> 1801c9c1039ae3f26827d175e7ad869de92b7c3a
